New site based on Twitter bootstrap.

--- a/index.html
+++ b/index.html
@@ -1,69 +1,115 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="RoboVM : The tagline" />
+    <meta charset="utf-8">
+    <title>RoboVM - Develop iPhone and iPad Apps in Java with RoboVM</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <!-- Le styles -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/prettify.css" rel="stylesheet">
+    <link href="css/robovm.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
 
-    <title>RoboVM</title>
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Fav and touch icons -->
+<!--    <link rel="shortcut icon" href="ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png"> -->
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/robovm">View on GitHub</a>
+<!--    <div id="wrap">
+      <div id="main"> -->
 
-          <h1 id="project_title">RoboVM</h1>
-          <h2 id="project_tagline">The tagline</h2>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+          <div class="navbar-inner">
+            <div class="container">
+              <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </a>
+              <a class="brand" href="#">RoboVM</a>
+              <div class="nav-collapse collapse">
+                <ul class="nav">
+                  <li><a href="#about">Docs</a></li>
+                  <li><a href="#contribute">Contribute</a></li>
+                  <li><a href="#contact">Contact</a></li>
+                  <li><a href="#contact">GitHub Project</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
 
-        </header>
-    </div>
+        <div class="container">
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+          <div class="hero-unit">
+            <div class="row">
+              <div class="span7">
+                <h1>RoboVM</h1>
+                <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
+              </div>
+              <div class="span3 get-started">
+                <p><a class="btn btn-primary btn-large">Get Started &raquo;</a></p>
+              </div>
+            </div>
+          </div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+          <div class="usps">
+            <div class="row">
+              <div class="span1"></div>
+              <div class="span5">
+                <h2>Java to Native</h2>
+                <p>The RoboVM compiler compiles Java bytecode into native ARM or x86 code. No interpreter involved!</p>
+                <p><a href="#">Read more &raquo;</a></p>
+              </div>
+              <div class="span5">
+                <h2>Objective-C Bridge</h2>
+                <p>RoboVM includes an Objective-C to Java bridge. Bridged Objective-C objects can be used just like any other Java object.</p>
+                <p><a href="#">Read more &raquo;</a></p>
+             </div>
+            </div>
+            <div class="row">
+              <div class="span1"></div>
+              <div class="span5">
+                <h2>Share Code</h2>
+                <p>Easily share code between Android and iOS apps. The standard classes (<code>java.lang.*</code>, <code>java.util.*</code>, etc) included in RoboVM are 
+                  based on Android's runtime.</p>
+                <p><a href="#">Read more &raquo;</a></p>
+             </div>
+              <div class="span5">
+                <h2>Free as in Freedom</h2>
+                <p>Code used by the compile time tools are GPLv3 licensed. Runtime code is licensed under commercially friendly BSD-like licenses, mostly the Apache License 2.0.</p>
+                <p><a href="#">Read more &raquo;</a></p>
+              </div>
+            </div>
+          </div>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+        </div>
+<!--      </div>
+    </div> -->
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+    <footer>
+      <p>&copy; Trillian AB 2012</p>
+    </footer>
 
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="js/jquery-1.8.2.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/prettify.js"></script>
 
   </body>
 </html>
