--- a/index.html
+++ b/index.html
@@ -111,5 +111,20 @@
     <script src="js/bootstrap.js"></script>
     <script src="js/prettify.js"></script>
 
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-36389194-1']);
+      _gaq.push(['_setDomainName', 'robovm.org']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
+
   </body>
 </html>
