--- a/index.html
+++ b/index.html
@@ -1,130 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>RoboVM - Develop iPhone and iPad Apps in Java with RoboVM</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+---
+layout: default
+title: front
+---
+<div class="container">
 
-    <!-- Le styles -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/prettify.css" rel="stylesheet">
-    <link href="css/robovm.css" rel="stylesheet">
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+  <div class="hero-unit">
+    <div class="row">
+      <div class="span7">
+        <h1>RoboVM</h1>
+        <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
+      </div>
+      <div class="span3 get-started">
+        <p><a class="btn btn-primary btn-large">Get Started &raquo;</a></p>
+      </div>
+    </div>
+  </div>
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+  <div class="usps">
+    <div class="row">
+      <div class="span1"></div>
+      <div class="span5">
+        <h2>Java to Native</h2>
+        <p>The RoboVM compiler compiles Java bytecode into native ARM or x86 code. No interpreter involved!</p>
+        <p><a href="#">Read more &raquo;</a></p>
+      </div>
+      <div class="span5">
+        <h2>Objective-C Bridge</h2>
+        <p>RoboVM includes an Objective-C to Java bridge. Bridged Objective-C objects can be used just like any other Java object.</p>
+        <p><a href="#">Read more &raquo;</a></p>
+     </div>
+    </div>
+    <div class="row">
+      <div class="span1"></div>
+      <div class="span5">
+        <h2>Share Code</h2>
+        <p>Easily share code between Android and iOS apps. The standard classes (<code>java.lang.*</code>, <code>java.util.*</code>, etc) included in RoboVM are 
+          based on Android's runtime.</p>
+        <p><a href="#">Read more &raquo;</a></p>
+     </div>
+      <div class="span5">
+        <h2>Free Software</h2>
+        <p>Code used by the compile time tools are GPLv3 licensed. Runtime code is licensed under commercially friendly BSD-like licenses, mostly the Apache License 2.0.
+        </p>
+        <p><a href="#">Read more &raquo;</a></p>
+      </div>
+    </div>
+  </div>
 
-    <!-- Fav and touch icons -->
-<!--    <link rel="shortcut icon" href="ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png"> -->
-  </head>
-
-  <body>
-
-<!--    <div id="wrap">
-      <div id="main"> -->
-
-        <div class="navbar navbar-inverse navbar-fixed-top">
-          <div class="navbar-inner">
-            <div class="container">
-              <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </a>
-              <a class="brand" href="#">RoboVM</a>
-              <div class="nav-collapse collapse">
-                <ul class="nav">
-                  <li><a href="#about">Docs</a></li>
-                  <li><a href="#contribute">Contribute</a></li>
-                  <li><a href="#contact">Contact</a></li>
-                  <li><a href="#contact">GitHub Project</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="container">
-
-          <div class="hero-unit">
-            <div class="row">
-              <div class="span7">
-                <h1>RoboVM</h1>
-                <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
-              </div>
-              <div class="span3 get-started">
-                <p><a class="btn btn-primary btn-large">Get Started &raquo;</a></p>
-              </div>
-            </div>
-          </div>
-
-          <div class="usps">
-            <div class="row">
-              <div class="span1"></div>
-              <div class="span5">
-                <h2>Java to Native</h2>
-                <p>The RoboVM compiler compiles Java bytecode into native ARM or x86 code. No interpreter involved!</p>
-                <p><a href="#">Read more &raquo;</a></p>
-              </div>
-              <div class="span5">
-                <h2>Objective-C Bridge</h2>
-                <p>RoboVM includes an Objective-C to Java bridge. Bridged Objective-C objects can be used just like any other Java object.</p>
-                <p><a href="#">Read more &raquo;</a></p>
-             </div>
-            </div>
-            <div class="row">
-              <div class="span1"></div>
-              <div class="span5">
-                <h2>Share Code</h2>
-                <p>Easily share code between Android and iOS apps. The standard classes (<code>java.lang.*</code>, <code>java.util.*</code>, etc) included in RoboVM are 
-                  based on Android's runtime.</p>
-                <p><a href="#">Read more &raquo;</a></p>
-             </div>
-              <div class="span5">
-                <h2>Free as in Freedom</h2>
-                <p>Code used by the compile time tools are GPLv3 licensed. Runtime code is licensed under commercially friendly BSD-like licenses, mostly the Apache License 2.0.</p>
-                <p><a href="#">Read more &raquo;</a></p>
-              </div>
-            </div>
-          </div>
-
-        </div>
-<!--      </div>
-    </div> -->
-
-    <footer>
-      <p>&copy; Trillian AB 2012</p>
-    </footer>
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery-1.8.2.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/prettify.js"></script>
-
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-36389194-1']);
-      _gaq.push(['_setDomainName', 'robovm.org']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
-
-  </body>
-</html>
+</div>
