Added docs. Fixed links in menu.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@ section: front
       <div class="span5">
         <h2>Java to Native</h2>
         <p>The RoboVM compiler compiles Java bytecode into native ARM or x86 code. No interpreter involved!</p>
-        <p><a href="#">Read more &raquo;</a></p>
+        <p><a href="docs.html">Read more &raquo;</a></p>
       </div>
       <div class="span5">
         <h2>Objective-C Bridge</h2>
         <p>RoboVM includes an Objective-C to Java bridge. Bridged Objective-C objects can be used just like any other Java object.</p>
-        <p><a href="#">Read more &raquo;</a></p>
+        <p><a href="docs.html">Read more &raquo;</a></p>
      </div>
     </div>
     <div class="row">
@@ -37,13 +37,13 @@ section: front
         <h2>Share Code</h2>
         <p>Easily share code between Android and iOS apps. The standard classes (<code>java.lang.*</code>, <code>java.util.*</code>, etc) included in RoboVM are 
           based on Android's runtime.</p>
-        <p><a href="#">Read more &raquo;</a></p>
+        <p><a href="docs.html">Read more &raquo;</a></p>
      </div>
       <div class="span5">
         <h2>Free Software</h2>
         <p>Code used by the compile time tools are GPLv3 licensed. Runtime code is licensed under commercially friendly BSD-like licenses, mostly the Apache License 2.0.
         </p>
-        <p><a href="#">Read more &raquo;</a></p>
+        <p><a href="docs.html#license">Read more &raquo;</a></p>
       </div>
     </div>
   </div>
