--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ section: front
         <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
       </div>
       <div class="span3 get-started">
-        <p><a class="btn btn-primary btn-large">Get Started &raquo;</a></p>
+        <p><a href="docs.html#build-and-install" class="btn btn-primary btn-large">Get Started &raquo;</a></p>
       </div>
     </div>
   </div>
@@ -41,7 +41,7 @@ section: front
      </div>
       <div class="span5">
         <h2>Free Software</h2>
-        <p>Code used by the compile time tools are GPLv3 licensed. Runtime code is licensed under commercially friendly BSD-like licenses, mostly the Apache License 2.0.
+        <p>The compile time tools are GPLv2 licensed. Runtime code is licensed under commercially friendly licenses, mostly the Apache License 2.0.
         </p>
         <p><a href="docs.html#license">Read more &raquo;</a></p>
       </div>
