--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: front
 section: front
 ---
+
 <div class="container">
 
   <div class="hero-unit">
@@ -12,7 +13,7 @@ section: front
         <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
       </div>
       <div class="span3 get-started">
-        <p><a href="docs.html#build-and-install" class="btn btn-primary btn-large">Get Started &raquo;</a></p>
+        <p><a href="docs.html#install" class="btn btn-primary btn-large">Download &raquo;</a></p>
       </div>
     </div>
   </div>
