--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ section: front
         <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
       </div>
       <div class="span3 get-started">
-        <p><a href="docs.html#install" class="btn btn-primary btn-large">Download &raquo;</a></p>
+        <p><a href="http://download.robovm.org" class="btn btn-primary btn-large">Download &raquo;</a></p>
+        <p><a href="docs.html#install">Installation Instructions</a></p>
+        <p><a href="http://download.robovm.org/eclipse">Eclipse Update Site</a></p>
       </div>
     </div>
   </div>
