--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ section: front
       </div>
       <div class="span3 get-started">
         <p><a href="http://download.robovm.org" class="btn btn-primary btn-large">Download &raquo;</a></p>
-        <p><a href="docs.html#install">Installation Instructions &raquo;</a><br/>
-        <a href="http://download.robovm.org/eclipse">Eclipse Update Site &raquo;</a></p>
+        <p><a href="docs.html#install">Install &raquo;</a><br/>
+        <a href="http://download.robovm.org/eclipse">Get the Eclipse plug-in &raquo;</a></p>
       </div>
     </div>
   </div>
