--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ section: front
       </div>
       <div class="span3 get-started">
         <p><a href="http://download.robovm.org" class="btn btn-primary btn-large">Download &raquo;</a></p>
-        <p><a href="docs.html#install">Install &raquo;</a><br/>
+        <p><a href="docs.html#install">Installation instructions &raquo;</a><br/>
         <a href="http://download.robovm.org/eclipse">Get the Eclipse plug-in &raquo;</a></p>
       </div>
     </div>
