--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ section: front
         <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
       </div>
       <div class="span3 get-started">
-        <p><a href="http://download.robovm.org/robovm-{{robovm.version}}.tar.gz" class="btn btn-primary btn-large">Download &raquo;</a></p>
+        <p><a href="http://download.robovm.org/robovm-{{site.robovm.version}}.tar.gz" class="btn btn-primary btn-large">Download &raquo;</a></p>
         <p><a href="docs.html#install">Installation instructions &raquo;</a><br/>
         <a href="http://download.robovm.org/eclipse/site.xml">Get the Eclipse plug-in &raquo;</a></p>
       </div>
