--- a/index.html
+++ b/index.html
@@ -14,8 +14,22 @@ section: front
       </div>
       <div class="span3 get-started">
         <p><a href="http://download.robovm.org/robovm-{{site.robovm.version}}.tar.gz" class="btn btn-primary btn-large">Download &raquo;</a></p>
-        <p><a href="docs.html#install">Installation instructions &raquo;</a><br/>
-        <a href="http://download.robovm.org/eclipse/site.xml">Get the Eclipse plug-in &raquo;</a></p>
+        <p>
+          <a href="docs.html#install">Installation instructions &raquo;</a><br/>
+          <a id="update-site-anchor" href="#">Eclipse plug-in update site:</a>
+          <small class="update-site-link" title="URL Copied To Clipboard" data-content="To install RoboVM for Eclipse, open Eclipse, go to &apos;Help > Install New Software&apos;, and paste this URL into the dialog box. Then, follow the on-screen instructions from there." id="update-site-link">
+            http://download.robovm.org/eclipse/site.xml
+          </small>
+          <script type="text/javascript">
+            $(document).ready(function() {
+              ZeroClipboard.setMoviePath("http://www.robovm.org/js/ZeroClipboard.swf");
+              var clip = new ZeroClipboard.Client();
+              clip.setHandCursor(true);
+              clip.setText("http://download.robovm.org/eclipse/site.xml");         
+              clip.glue("update-site-link");
+            });
+          </script>
+        </p>
       </div>
     </div>
   </div>
