--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@ section: front
         <p>
           <a href="docs.html#install">Installation instructions &raquo;</a><br/>
           <a id="update-site-anchor" href="#">Eclipse plug-in update site:</a>
-          <small class="update-site-link" title="URL Copied To Clipboard" data-content="To install RoboVM for Eclipse, open Eclipse, go to &apos;Help > Install New Software&apos;, and paste this URL into the dialog box. Then, follow the on-screen instructions from there." id="update-site-link">
+          <div class="update-site-link" title="URL Copied To Clipboard" data-clipboard-text="http://download.robovm.org/eclipse/site.xml" data-content="To install RoboVM for Eclipse, open Eclipse, go to &apos;Help > Install New Software&apos;, and paste this URL into the dialog box. Then, follow the on-screen instructions from there." id="update-site-link">
             http://download.robovm.org/eclipse/site.xml
-          </small>
+          </div>
           <script type="text/javascript">
             $(document).ready(function() {
               ZeroClipboard.setMoviePath("http://www.robovm.org/js/ZeroClipboard.swf");
-              var clip = new ZeroClipboard();
+              var clip = new ZeroClipboard($("#update-site-link"));
               //clip.setHandCursor(true);
-              clip.setText("http://download.robovm.org/eclipse/site.xml");         
-              clip.glue($("small#update-site-link"));
+              clip.on( 'complete', function(client, args) {
+                alert("Copied text to clipboard: " + args.text );
+              });
             });
           </script>
         </p>
