--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ section: front
           </div>
           <script type="text/javascript">
             $(document).ready(function() {
-              $('#update-site-link').popover(options);
+              $('#update-site-link').popover({});
               //ZeroClipboard.setMoviePath("http://www.robovm.org/js/ZeroClipboard.swf");
               //var clip = new ZeroClipboard($("#update-site-link"));
               ////clip.setHandCursor(true);
