--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ section: front
           <a id="update-site-link" href="#" data-content="To install RoboVM for Eclipse, open Eclipse, go to &apos;Help > Install New Software&apos;, and paste the URL below into the dialog box. Then, follow the on-screen instructions from there.">Get the Eclipse plug-in &raquo;</a>
           <script type="text/javascript">
             $(document).ready(function() {
-              $('#update-site-link').popover({html: true});
+              $('#update-site-link').clickover({html: true, placement: 'bottom'});
               //ZeroClipboard.setMoviePath("http://www.robovm.org/js/ZeroClipboard.swf");
               //var clip = new ZeroClipboard($("#update-site-link"));
               ////clip.setHandCursor(true);
