--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ section: front
         <p>
           <a href="docs.html#install">Installation instructions &raquo;</a><br/>
           <a id="update-site-link" href="#">Get the Eclipse plug-in &raquo;</a>
-          <div id="update-site-popover" style="display: none;">To install RoboVM for Eclipse, open Eclipse, go to &apos;Help > Install New Software&apos;, 
+          <div id="update-site-popover" style="display: none;">To install RoboVM for Eclipse, open Eclipse, go to <em>Help &rarr; Install New Software</em>, 
             and paste this URL into the dialog box. Then, follow the on-screen instructions from there.
             <div class="update-site-url">http://download.robovm.org/eclipse/site.xml</div>
           </div>
