--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ section: front
         <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
       </div>
       <div class="span3 get-started">
-        <p><a href="http://download.robovm.org/robovm-{{site.robovm.version}}.tar.gz" class="btn btn-primary btn-large">Download &raquo;</a></p>
+        <p><a href="http://download.robovm.org/robovm-{{site.robovm.version}}.tar.gz" class="btn btn-primary btn-large">Download&nbsp;&raquo;</a></p>
         <p>
-          <a href="docs.html#install">Installation instructions &raquo;</a><br/>
-          <a id="update-site-link" href="#">Get the Eclipse plug-in &raquo;</a>
+          <a href="docs.html#install">Installation&nbsp;instructions&nbsp;&raquo;</a><br/>
+          <a id="update-site-link" href="#">Get&nbsp;the&nbsp;Eclipse&nbsp;plug-in&nbsp;&raquo;</a>
           <div id="update-site-popover" style="display: none;">To install RoboVM for Eclipse, open Eclipse, go to <em>Help &rarr; Install New Software</em>, 
             and paste this URL into the dialog box. Then, follow the on-screen instructions from there.
             <div class="update-site-url">http://download.robovm.org/eclipse/site.xml</div>
@@ -30,12 +30,6 @@ section: front
                 placement: 'bottom', 
                 content: content
               });
-              //ZeroClipboard.setMoviePath("http://www.robovm.org/js/ZeroClipboard.swf");
-              //var clip = new ZeroClipboard($("#update-site-link"));
-              ////clip.setHandCursor(true);
-              //clip.on( 'complete', function(client, args) {
-              //  alert("Copied text to clipboard: " + args.text );
-              //});
             });
           </script>
         </p>
