--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ section: front
      </div>
       <div class="span5">
         <h2>Free Software</h2>
-        <p>The compile time tools are GPLv2 licensed. Runtime code is licensed under business friendly licenses, mostly the Apache License 2.0.
+        <p>The compile time tools are GPLv2 licensed. Runtime code is licensed under business friendly licenses, mostly the Apache License v2.0.
         </p>
         <p><a href="docs.html#license">Read more &raquo;</a></p>
       </div>
