--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ section: front
       </div>
       <div class="span5">
         <h2>Objective-C Bridge</h2>
-        <p>RoboVM includes an Objective-C to Java bridge. Bridged Objective-C objects can be used just like any other Java object.</p>
+        <p>RoboVM includes an Objective-C to Java bridge. Bridged Objective-C objects can be used just like any other Java object. Much of UIKit is already working and more frameworks will follow.</p>
         <p><a href="docs.html">Read more &raquo;</a></p>
      </div>
     </div>
