--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@ section: front
     </div>
   </div>
 
+  <div class="social">
+    <a href="https://twitter.com/robovm" class="twitter-follow-button" data-show-count="false">Follow @robovm</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  </div>
+
   <div class="usps">
     <div class="row">
       <div class="span1"></div>
