--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ section: front
 
   <div class="social">
     <a href="https://twitter.com/robovm" class="twitter-follow-button" data-show-count="false">Follow @robovm</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.robovm.org" data-via="robovm" data-count="none">Tweet</a>
   </div>
 
   <div class="usps">
@@ -72,4 +72,5 @@ section: front
     </div>
   </div>
 
+  <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 </div>
