--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@ section: front
   </div>
 
   <div class="social">
-    <a href="https://twitter.com/robovm" class="twitter-follow-button" data-show-count="false">Follow @robovm</a>
-    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.robovm.org" data-via="robovm" data-count="none">Tweet</a>
+    <ul>
+      <li><a href="https://twitter.com/robovm" class="twitter-follow-button" data-show-count="false">Follow @robovm</a></li>
+      <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.robovm.org" data-via="robovm" data-count="none">Tweet</a></li>
+    </ul>
   </div>
 
   <div class="usps">
