--- a/index.html
+++ b/index.html
@@ -38,8 +38,18 @@ section: front
 
   <div class="social">
     <ul>
-      <li><a href="https://twitter.com/robovm" class="twitter-follow-button" data-show-count="false">Follow @robovm</a></li>
-      <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.robovm.org" data-via="robovm" data-count="none">Tweet</a></li>
+      <li>
+        <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=robovm&repo=robovm&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+      </li>
+      <li>
+        <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=robovm&repo=robovm&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
+      </li>
+      <li>
+        <a href="https://twitter.com/robovm" class="twitter-follow-button" data-show-count="false">Follow @robovm</a>
+      </li>
+      <li>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.robovm.org" data-via="robovm" data-count="none">Tweet</a>
+      </li>
     </ul>
   </div>
 
