--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@ section: front
   <div class="social">
     <ul>
       <li>
-        <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=robovm&repo=robovm&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+        <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=robovm&repo=robovm&type=watch" allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
       </li>
       <li>
-        <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=robovm&repo=robovm&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
+        <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=robovm&repo=robovm&type=fork" allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20"></iframe>
       </li>
       <li>
         <a href="https://twitter.com/robovm" class="twitter-follow-button" data-show-count="false">Follow @robovm</a>
