--- a/docs.html
+++ b/docs.html
@@ -36,7 +36,7 @@ section: docs
         <ul>
           <li>Java JDK 6 or newer - <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Oracle's JDK</a> 
             or <a href="http://openjdk.java.net should work">OpenJDK</a></li>
-          <li><a href="http://llvm.org/releases">LLVM 3.2</li>
+          <li><a href="http://llvm.org/releases">LLVM 3.2</a></li>
           <li>An assembler - GCC (on Linux) and clang (on Mac OS X) are used as assembler frontends</li>
           <li>A linker - GCC (on Linux) and clang (on Mac OS X) are used as linker frontends</li>
           <li>Mac OS X only: To run iOS apps in the simulator or on a device you will need Xcode 4.5.2 installed</li>
