--- a/docs.html
+++ b/docs.html
@@ -11,7 +11,7 @@ section: docs
         <li><a href="#intro"><i class="icon-chevron-right"></i> Introduction</a></li>
         <li>
           <a href="#getting-started"><i class="icon-chevron-right"></i> Getting Started</a>
-          <ul>
+          <ul class="nav nav-list">
             <li><a href="#install"><i class="icon-chevron-right"></i> Installation instructions</a></li>
           </ul>
         </li>
