--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ section: front
         <h2>Free Software</h2>
         <p>The compile time tools are GPLv2 licensed. Runtime code is licensed under business friendly licenses, mostly the Apache License v2.0.
         </p>
-        <p><a href="docs.html#license">Read more &raquo;</a></p>
+        <p><a href="license.html">Read more &raquo;</a></p>
       </div>
     </div>
   </div>
