--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ section: front
       <div class="span1"></div>
       <div class="span5">
         <h2>Java to Native</h2>
-        <p>The RoboVM compiler compiles Java bytecode into native ARM or x86 code. Apps run directly on the CPU. No interpreter or virtual machine involved.</p>
+        <p>The RoboVM compiler translates Java bytecode into native ARM or x86 code. Apps run directly on the CPU. No interpreter or virtual machine involved.</p>
         <p><a href="docs.html">Read more &raquo;</a></p>
       </div>
       <div class="span5">
