--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@ section: front
           </script>
         </p>
       </div>
+      <ul id="js-news" class="js-hidden">
+        <li class="news-item"><a href="#">This is the 1st latest news item.</a></li>
+        <li class="news-item"><a href="#">This is the 2nd latest news item.</a></li>
+        <li class="news-item"><a href="#">This is the 3rd latest news item.</a></li>
+        <li class="news-item"><a href="#">This is the 4th latest news item.</a></li>
+      </ul>
     </div>
   </div>
 
@@ -85,7 +91,14 @@ section: front
   </div>
 
   <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+  <script src="js/jquery.ticker.js" type="text/javascript"></script>
   <script type="text/javascript">
+      $(function () {
+          $('#js-news').ticker();
+      });
+  </script>  
+  <script type="text/javascript">
+
     function parseRSS(url, callback) {
       $.ajax({
         url: document.location.protocol + '//ajax.googleapis.com/ajax/services/feed/load?v=1.0&num=10&callback=?&q=' + encodeURIComponent(url),
