--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ section: front
   </div>
 
   <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+  <link href="css/ticker-style.css" rel="stylesheet" type="text/css" />
   <script src="js/jquery.ticker.js" type="text/javascript"></script>
   <script type="text/javascript">
       $(function () {
